<resources>
    <string name="app_name">Quick Jot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_note">Add a note</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="sort_by_title">Sort by Title A-Z</string>
    <string name="sort_by_title_d">Sort by Title Z-A</string>
    <string name="sort_by_date_a">Sort by Date New-Old</string>
    <string name="sort_by_date_d">Sort by Date Old-New</string>
</resources>